# tauri-solid-ts-tailwind-vite

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.js  LICENSE  README.md  bun.lockb  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  prettier.config.js  renovate.json  renovate.json5  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.tauri.js  vite.config.tauri.ts  vite.config.ts
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  update-bun-dependencies.yml  update-node-dependencies.yml  update-rust-packages.yml
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Footer.tsx  Header.tsx  Link.tsx  Main.tsx
