[package]
name = "app"
version = "1.0.0"
description = "A Tauri Solid TypeScript Tailwind Vite App Template"
authors = ["AR10"]
license = "MIT"
repository = "https://github.com/AR10Dev/tauri-solid-ts-tailwind-vite"
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
